# sql-optimizer

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: lib.rs  tests.rs
src/domain/: models.rs
src/infrastructure/: mod.rs  wasm_api.rs
src/rules/: ast_traversal.rs  engine.rs  helpers.rs  mod.rs  schema_checks.rs  structural.rs
src/use_cases/: analyzer.rs  mod.rs  schema_parser.rs
web/: app.js  i18n.js  index.html  style.css
web/js/: main.js
web/js/models/: AppState.js
web/js/services/: WasmService.js
web/js/viewmodels/: MainViewModel.js
web/js/views/: EditorView.js  Renderers.js  UILangManager.js
