[package]
name = "sql-optimizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen    = "0.2"
sqlparser        = { version = "0.50", features = ["serde"] }
serde            = { version = "1",    features = ["derive"] }
serde_json       = "1"
console_error_panic_hook = "0.1"

# Needed by some transitive deps when targeting wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
# Optimise for binary size, crucial for wasm downloads
opt-level = "s"
lto       = true
